--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -4,5 +4,5 @@ jobs:
   first-job:
     runs-on: ubuntu-latest
       steps:
-        - name: print-greet
+        - name: print greet
           run: echo "hello"
